# aap-lv2-fluidsynth

./: .gitignore  .gitmodules  Makefile  Makefile.android  README.md  build.gradle  fluidsynth-ndk24.patch  gradle.properties  settings.gradle  setup-asan-for-debugging.sh
.github/workflows/: actions.yml
aap-fluidsynth/: build.gradle
aap-fluidsynth/src/androidTest/java/org/androidaudioplugin/aap_fluidsynth/: MidiDeviceServiceTest.kt  PluginTest.kt
aap-fluidsynth/src/main/: AndroidManifest.xml  CMakeLists.txt  fluidsynth-lv2.cpp
aap-fluidsynth/src/main/cpp/: CMakeLists.txt  android-application-context.cpp  fluid_androidasset.h  fluidsynth-lv2.cpp
aap-fluidsynth/src/main/res/values/: styles.xml
aap-fluidsynth/src/main/res/xml/: aap_metadata.xml  midi_device_info.xml
app/: build.gradle
app/src/androidTest/java/org/androidaudioplugin/aap_fluidsynth/: MidiDeviceServiceTest.kt  PluginTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android-application-context.h  fluidsynth-lv2.cpp
app/src/main/java/org/androidaudioplugin/aap_fluidsynth/: JNIInitializer.kt
app/src/main/res/xml/: aap_metadata.xml
fluidsynth-native/: build.gradle
fluidsynth-native/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
